k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: imagik
  name: imagik
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: imagik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: imagik
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-pv-claim
      containers:
        - command:
          - /imagik
          - -c=/config.yml
          image: ghcr.io/beryju/imagik:2020.12.1
          name: imagik
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: storage
          livenessProbe:
            httpGet:
              path: /api/pub/health/liveness
              port: http
          readinessProbe:
            httpGet:
              path: /api/pub/health/readiness
              port: http
            failureThreshold: 20
            successThreshold: 1
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 10M
            limits:
              cpu: 500m
              memory: 250M
