k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: imagik
  name: imagik
spec:
  rules:
  - host: i.beryju.org
    http:
      paths:
      - backend:
          serviceName: imagik
          servicePort: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - i.beryju.org
    secretName: imagik-acme
